:lipstick: layouts(navigation): Fix responsive navbar clipping
This commit improves the overall responsiveness of the top navigation
bar. Previously, the text of the site would clip off-screen and disrupt
the user experience. This fixes the navigation bar so it appears better
on smaller screen sizes.

Additionally, support for the alternate logo was removed since it was
made redundant in this change, so the feature is removed from the code
and no longer exposed in the example site configuration.

Fixes #143.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1285,6 +1285,10 @@ footer a:hover{
     text-transform: capitalize !important;
 }
 
+.dpgCard {
+    background-color: var(--body-color);
+}
+
 /* sidebar media queries*/
 @media (max-width:1100px ){
     .sidebarContainer{
@@ -1335,6 +1339,8 @@ footer a:hover{
     }
 }
 
-.dpgCard{
-    background-color: var(--body-color);
+@media (max-width: 350px) {
+    .globalLogoImg{
+        width:170px !important;
+    }
 }
